# SQLITE

./: CRUD-Delete.ipynb  CRUD-Update.ipynb  Estoque.db  Python e SQL - Controle de Estoque com Python-Gabarito.ipynb  Python e SQL - Exercício Análise de Dados.ipynb  README.md  chinook.db  pyproject.toml
.ipynb_checkpoints/: CRUD-Create-checkpoint-DESKTOP-7QBPQVD.ipynb  CRUD-Create-checkpoint.ipynb  CRUD-Delete-checkpoint.ipynb  CRUD-Read-checkpoint-DESKTOP-FDRJDID.ipynb  CRUD-Read-checkpoint.ipynb  CRUD-ReadPandas-checkpoint.ipynb  Python e SQL - Controle de Estoque com Python-Gabarito-checkpoint.ipynb  Python e SQL - Controle de Estoque com Python-checkpoint.ipynb  Python e SQL 03 - Create-checkpoint.ipynb
