[tool.poetry]
name = "sqlite"
version = "0.1.0"
description = ""
authors = ["Sergio Semprebom <sergiosemprebom@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyodbc = "^5.2.0"
pandas = "^2.2.3"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
